style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    
}

html{
    scrollbar-gutter: stable;

}

body{
    background-color: #F6F5E9;
}


/*NAVIGATION BAR*/
nav{
    display: flex;
    justify-content: space-between;
    padding-left: 1%;
    align-items: center;
    min-height: 10vh;
    background-color: #0D3B66;
    font-family: 'DM serif';
    position: sticky;
    top: 0;
}

.logo {
    color: #FFFFFF;
    text-transform: uppercase;
    letter-spacing: 3px;
    
}

.nav-links{
    display: flex;
    justify-content: space-around;
    width: 35%;
}
.nav-links li{
    list-style: none;
}

.nav-links a{
    color: #FFFFFF;
    text-decoration: none;
    letter-spacing: 2px;
    font-size: 16px;
    transition: color 0.3s ease;
    
}

.nav-links a:hover{
    color: #ffe0b0;
    text-decoration: none;
    letter-spacing: 2px;
    font-size: 16px;
    
}
/*CONTACTS*/
.contact-ul{
    display: flex;
    align-items: center;
}

.contact-ul li{
    list-style: none;
}

/*HOMEPAGE INFO*/

.homepage-img img{
    padding-top: 7%;
    width: 720px;
    max-width: 100%;
    max-height: 400px;
    object-fit: cover;
    margin-right: 0;
    margin-bottom: 15px;
    object-position: left;
    
}

.homepage-img{
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    flex-wrap: wrap;
}


.aboutme p{
    
    display: flex;
    justify-content: space-between;
    max-width: 70vh;
    min-width: 50vh;
    padding:1%;
    padding-left: 4%;
    font-family: DM serif;
    font-size: 18px;
 
}

.aboutme h3{
    padding-bottom: 10%;
    display: flex;
    font-family: DM serif;
    font-size: 24px;
    padding-left: 4%;
}

.contacts {
    padding: 1%;
}

.container {
    display: flex;
    align-items: center;
    gap: 20%;
    flex-direction: row;

}

@media (max-width: 768px) {
    .container{
        flex-direction: column;
    }
}



/*PROJECTS PAGE*/
.project_container{
    display: flex;
    align-items: center;
    gap: 20%;
    justify-content: center;
    padding: 20px;
}

.project_details{
    padding:1%;
    font-family: DM serif;
    font-size: 20px;
    list-style-position: inside;
    min-width: 200px;
    flex: 1;
    flex-direction: column;
    display: flex;

  
}


.img-side{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
    flex: 2;
    max-width: 600px;
    
}

.small_images{

    display: flex;
    flex-direction: row;
    gap:50px;
    width: 300px;
    align-items: flex-end;
    padding-right: 25%;

}

.project_details h3{
    margin: 0;
    padding-bottom: 4%;
    display: flex;
    font-family: DM serif;
    font-size: 24px;
}

.small_images img{
    width: 100%;
    max-width: 250px;
    height: auto;
    border-radius: 5px;
}

#big_image img{
    padding-top: 4%;
    width: 100%;
    height: auto;
    border-radius: 10px;
    display: block;
}

#big_image{
    display: flex;
    flex-direction: column;
    gap:15px;
    width: 100%;
    height: auto;
    flex-wrap: wrap;
}

@media (max-width: 786px) {
    .big_image {
        flex-direction: column;
    }
        .small-images {
        flex-direction: column;
    }
}

